[package]
name = "rs-iox-shipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb_iox_client = { git = "https://github.com/influxdata/influxdb_iox.git" }
tokio = { version = "1", features = ["full"] }
